--- a/PROC36-1_4-actividad-maestra1-master/index.html
+++ b/PROC36-1_4-actividad-maestra1-master/index.html
@@ -13,15 +13,15 @@
 
 
     <script>
-      const firebaseConfig = {
-        apiKey: "AIzaSyAYpAzFbfVuanBjoZ7H2URyKePJmEVEM2o",
-        authDomain: "prueba-clase-36.firebaseapp.com",
-        databaseURL: "https://prueba-clase-36-default-rtdb.firebaseio.com",
-        projectId: "prueba-clase-36",
-        storageBucket: "prueba-clase-36.appspot.com",
-        messagingSenderId: "730173244268",
-        appId: "1:730173244268:web:6e42cf5b4843410309a949"
-      };
+     const firebaseConfig = {
+  apiKey: "AIzaSyAfxsh0NUZjfnRjqbcuRXgWTfY1Lvyp-mw",
+  authDomain: "miprimerdb-e8512.firebaseapp.com",
+  databaseURL: "https://miprimerdb-e8512-default-rtdb.firebaseio.com",
+  projectId: "miprimerdb-e8512",
+  storageBucket: "miprimerdb-e8512.appspot.com",
+  messagingSenderId: "403330983869",
+  appId: "1:403330983869:web:5b9a8a77135b2d720894d4"
+};
 
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
